<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textSize="30sp"
        android:background="#e7b2ad"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="20sp"
        android:textColor="#ff0000"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:textSize="20sp"
        android:typeface="serif"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text5"
        android:textSize="30sp"
        android:singleLine="true"
        />
    <!--singleLine은 칸을 넘어가면 뒤에...으로 바뀜-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str1"
        android:textSize="20sp"
        android:layout_margin="20dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str1"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:enabled="false"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/but_str1"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:clickable="false"
        android:rotation="60"
        />
    <!--enabled, clickable 은 기본값이 true임-->

</LinearLayout>
